[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/sprites/scenario/platform_1.png" type="Texture" id=1]
[ext_resource path="res://assets/objects/FallingPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 208.522, 51.6784 )

[sub_resource type="Animation" id=2]
resource_name = "ShakePlatform"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 300, 16 ), Vector2( 280, 16 ), Vector2( 300, 16 ), Vector2( 320, 16 ), Vector2( 300, 16 ), Vector2( 280, 16 ), Vector2( 300, 16 ), Vector2( 320, 16 ) ]
}

[node name="FallingPlatform" type="KinematicBody2D"]
position = Vector2( 203.417, 279.698 )
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 300, 16 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 298.169, 16.9898 )
shape = SubResource( 1 )
one_way_collision = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ShakePlatform = SubResource( 2 )

[node name="ResetTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( 282.298, 12.6447 )
shape = SubResource( 1 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
